--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="The website of team API 1000"
-    />
+    <meta name="description" content="The website of team API 1000" />
     <title>Team API 1000</title>
   </head>
   <body>
