--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="The website of team API 1000" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap" rel="stylesheet">
+    <!--
+      Thin 100
+      Light 300
+      Regular 400
+      Semi-bold 600
+      Bold 700
+    -->
     <title>Team API 1000</title>
   </head>
   <body>
